Issue #14 - Seeing if uberjar will just get the deps I need

--- a/.github/workflows/clojars-publish.yaml
+++ b/.github/workflows/clojars-publish.yaml
@@ -29,8 +29,8 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/deps.edn') }}
       - name: Switch to Project Directory
         run: cd projects/intracel-core
-      - name: Install Dependencies
-        run: clojure -T:deps
+      #- name: Install Dependencies
+      #  run: clojure -T:deps
       - name: Build Uberjar
         run: clojure -T:build uberjar
       - name: Publish to Clojars
