--- a/.github/workflows/clojars-publish.yaml
+++ b/.github/workflows/clojars-publish.yaml
@@ -27,16 +27,24 @@ jobs:
             ~/.clojure
             ~/.cpcache
           key: ${{ runner.os }}-${{ hashFiles('**/deps.edn') }}
+      - name: Install Polylith
+        run: | 
+          wget https://github.com/polyfy/polylith/releases/download/v0.2.21/poly-0.2.21.jar
+          mkdir -p /usr/local/polylith
+          mv poly-0.2.21.jar /usr/local/polylith/ 
+          cp scripts/poly /usr/local/bin/poly        
       - name: Switch to Project Directory
         run: cd projects/intracel-core
       #- name: Install Dependencies
       #  run: clojure -T:deps
-      - name: Build Uberjar
-        run: clojure -T:build uberjar
+      - name: Run Tests
+        run: |
+          source ./set-jvm-opts.sh
+          poly test
+      - name: Build Library Jar
+        run: clojure -T:build libjar :project intracel-core
       - name: Publish to Clojars
         env:
           CLOJARS_USERNAME: ${{ secrets.CLOJARS_USER }}
           CLOJARS_PASSWORD: ${{ secrets.CLOJARS_DEPLOY_KEY }}
-        run: clojure -T:build deploy :snapshot false
-      
-        
+        run: clojure -T:build deploy :project intracel-core
