--- a/.github/workflows/clojars-publish.yaml
+++ b/.github/workflows/clojars-publish.yaml
@@ -14,6 +14,8 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '11'
+      - name: Set Git Tag Variable
+        run: echo "GIT_TAG=${GITHUB_REF_NAME}" >> $GITHUB_ENV
       - name: Setup Clojure
         uses: DeLaGuardo/setup-clojure@master
         with:
@@ -42,9 +44,12 @@ jobs:
           source ./set-jvm-opts.sh
           poly test
       - name: Build Library Jar
+        env:
+          VERSION: ${{ env.GIT_TAG }} # Pass the tag to the build script
         run: clojure -T:build libjar :project intracel-core
       - name: Publish to Clojars
         env:
+          VERSION: ${{ env.GIT_TAG }} # Pass the tag to the build script
           CLOJARS_USERNAME: ${{ secrets.CLOJARS_USER }}
           CLOJARS_PASSWORD: ${{ secrets.CLOJARS_DEPLOY_KEY }}
         run: clojure -T:build deploy :project intracel-core
